CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT("console")

OPTION(BUILD_SHARED_LIBS "Whether to build libui as a shared library or a static library" ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/samples")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_TEST_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/test")

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(samples)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
