CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT("console")

OPTION(BUILD_SHARED_LIBS "Whether to build libui as a shared library or a static library" ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/samples")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
SET(CMAKE_TEST_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/test")

#ADD_DEFINITIONS("-std=c++14 -Wall")
SET(CMAKE_CXX_STANDARD 14)

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(samples)

# ENABLE_TESTING()
# ADD_SUBDIRECTORY(test)
