# or better "cmake -DCMAKE_BUILD_TYPE=Debug .."
SET(CMAKE_BUILD_TYPE Debug)

SET(CONSOLE_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(CONSOLE_SOURCES_DIR ${CONSOLE_SOURCES_DIR} PARENT_SCOPE)

LIST(APPEND CONSOLE_SOURCES
    ${CONSOLE_SOURCES_DIR}/console.cpp
)
SET(CONSOLE_SOURCES ${CONSOLE_SOURCES} PARENT_SCOPE)

ADD_LIBRARY(console
    ${CONSOLE_SOURCES}
)
